# neverthrow.py

./: .gitignore  flake.nix  pyproject.toml  pytest.ini  readme.md
src/neverthrow/: result.py
tests/: test_monad_laws.py
